overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  template:
    spec:
      volumes:
      - name: db-volume
        persistenVolumeClaim:
          claimName: prod-mysql-pvc-claim
