overlays/production/route-mng.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    app: todonodejs
    name: frontend
    cluster: mng
spec:
  host: todo.apps.ocp4-mng.example.com
  path: /todo
  to:
    kind: Service
    name: prod-frontend
    weight: 100
